--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -20,12 +20,12 @@
             padding: 5px;
         }
           .nav-link:hover {
-              background-color: rgb(16, 207, 255); /* Màu nền chuyển sang đỏ khi hover */
+              background-color:  #4CAF50; /* Màu nền chuyển sang đỏ khi hover */
               color: white; /* Chữ chuyển sang màu trắng */
         }
         .nav-link.active {
           color: black; /* Màu chữ khi active */
-          background-color:rgb(16, 207, 255); /* Màu nền khi active */
+          background-color: #4CAF50; /* Màu nền khi active */
           border-radius: 5px;
       }
           footer {
@@ -36,13 +36,13 @@
             color:rgb(233, 33, 33);
           }
           .btn-primary {
-              background-color:rgb(83, 180, 249) !important; /* Màu nền tùy ý */
+              background-color: #4CAF50; !important; /* Màu nền tùy ý */
               border-color:rgb(55, 108, 242)     /* Màu viền */
               color: white !important;            /* Màu chữ */
           }
       
           .btn-primary:hover {
-              background-color:rgb(83, 180, 249) !important; /* Màu khi hover */
+              background-color: #45a049; !important; /* Màu khi hover */
               border-color:rgb(255, 0, 0);
               border-width: 1.5px !important;
           }
@@ -54,7 +54,7 @@
             color: ;
         }
         .tab-button:hover {
-          background:rgb(36, 228, 249);
+          background;
           color:rgb(234, 83, 66);
       }
       </style>  
