--- a/app/templates/app/pet.html
+++ b/app/templates/app/pet.html
@@ -51,12 +51,12 @@
             margin-right: 10px;
         }
         .nav-link:hover {
-            background-color: hsl(203, 89.90%, 64.90%); /* Màu nền chuyển sang đỏ khi hover */
+            background-color:  #4CAF50; /* Màu nền chuyển sang đỏ khi hover */
             color: white; /* Chữ chuyển sang màu trắng */
       }
       .nav-link.active {
           color: black; /* Màu chữ khi active */
-          background-color:rgb(16, 207, 255); /* Màu nền khi active */
+          background-color: #4CAF50; /* Màu nền khi active */
           border-radius: 5px;
       }
         footer {
